<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="loading_failure">Photo cannot be loaded</string>
    <string name="no_storage">No storage</string>
    <string name="no_external_storage_available">No external storage available</string>
    <string name="save_error">"Couldn't save cropped image."</string>
    <string name="photo_saved">Photo saved to %s album</string>
    <string name="loading_image">Loading image…</string>
    <string name="drm_not_allowed_usage">File with limited usage license. Cannot select.</string>
    <string name="crop_save_text">Crop</string>
    <string name="multiface_crop_help">Touch a face to begin.</string>
    <string name="crop_label">Crop picture</string>
    <string name="wallpaper">Setting wallpaper…</string>
    <string name="stylesuite">Generic</string>
    <string name="text_font_hwr_young">Young</string>
    <string name="text_font_hwr_finance">Finance</string>
    <string name="text_font_hwr_rocky">Rocky</string>
    <string name="cannot_load_image">Cannot load the image!</string>
    <string name="original_picture_text">@string/original</string>
    <string name="original">Original</string>
    <string name="borders">Borders</string>
    <string name="filtershow_undo">Undo</string>
    <string name="filtershow_redo">Redo</string>
    <string name="show_history_panel">Show History</string>
    <string name="hide_history_panel">Hide History</string>
    <string name="show_imagestate_panel">Show Image State</string>
    <string name="hide_imagestate_panel">Hide Image State</string>
    <string name="history">History</string>
    <string name="reset">Reset</string>
    <string name="history_original">@string/original</string>
    <string name="imageState">Current Image State</string>
    <string name="apply_effect">Apply</string>
    <string name="aspect1to1_effect">1:1</string>
    <string name="aspect4to3_effect">4:3</string>
    <string name="aspect3to4_effect">3:4</string>
    <string name="aspect4to6_effect">4:6</string>
    <string name="aspect5to7_effect">5:7</string>
    <string name="aspect7to5_effect">7:5</string>
    <string name="aspect9to16_effect">16:9</string>
    <string name="aspect16to9_effect">9:16</string>
    <string name="aspectNone_effect">None</string>
    <string name="aspectOriginal_effect">@string/original</string>
    <string name="tinyplanet">Tiny Planet</string>
    <string name="exposure">Exposure</string>
    <string name="sharpness">Sharpness</string>
    <string name="contrast">Contrast</string>
    <string name="vibrance">Vibrance</string>
    <string name="saturation">Saturation</string>
    <string name="bwfilter">BW Filter</string>
    <string name="wbalance">Autocolor</string>
    <string name="hue">Hue</string>
    <string name="shadow_recovery">Shadows</string>
    <string name="curvesRGB">Curves</string>
    <string name="vignette">Vignette</string>
    <string name="redeye">Red Eye</string>
    <string name="straighten">Straighten</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="mirror">Mirror</string>
    <string name="none">None</string>
    <string name="curves_channel_rgb">RGB</string>
    <string name="curves_channel_red">Red</string>
    <string name="curves_channel_green">Green</string>
    <string name="curves_channel_blue">Blue</string>
    <string name="filtershow_saving_image">Saving picture to %1$s</string>
    <string name="select_image">Select photo</string>
    <string name="ffx_vintage">Vintage</string>
    <string name="ffx_instant">Instant</string>
    <string name="ffx_bleach">Bleach</string>
    <string name="ffx_blue_crush">Blue</string>
    <string name="ffx_bw_contrast">B/W</string>
    <string name="ffx_punch">Punch</string>
    <string name="ffx_x_process">X Process</string>
    <string name="ffx_washout">Latte</string>
    <string name="ffx_washout_color">Litho</string>
    <string name="save_photo">Save edited photo?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="style_menu_charlie">Charlie</string>
    <string name="style_menu_pixy">Pixy</string>
    <string name="style_menu_kurt">Kurt</string>
    <string name="style_menu_jackie">Jackie</string>
    <string name="style_menu_lindsay">Lindsay</string>
    <string name="style_menu_Alfred">Alfred</string>
    <string name="style_menu_jaida">Jaida</string>
    <string name="style_menu_pam">Pam</string>
    <string name="style_menu_lomoish">Lomo</string>
    <string name="style_menu_documentary">Docu.</string>
    <string name="style_menu_posterize">Posterize</string>
    <string name="style_menu_sepia">Sepia</string>
    <string name="style_menu_grain">Grain</string>
    <string name="style_menu_sandy">Sandy</string>
    <string name="style_menu_maya">Maya</string>
    <string name="style_menu_nikki">Nikki</string>
    <string name="style_menu_quentin">Quentin</string>
    <string name="style_menu_olivia">Olivia</string>
    <string name="style_menu_queen">Queen</string>
    <string name="style_menu_tyler">Tyler</string>
    <string name="text_font">Default</string>
    <string name="text_size_small">Small</string>
    <string name="text_size_normal">Normal</string>
    <string name="text_size_large">Large</string>
    <string name="effect_menu_filter">Filter</string>
    <string name="effect_menu_style">Style</string>
    <string name="effect_menu_crop">Crop</string>
    <string name="effect_menu_border">Border</string>
    <string name="effect_menu_stamp">Stamp</string>
    <string name="effect_menu_doodle">Doodle</string>
    <string name="effect_menu_text">Text</string>
    <string name="effect_menu_edit">Edit</string>
    <string name="aspectFree_effect">Free</string>
    <string name="action_rotate_right">Rotate R</string>
    <string name="action_rotate_left">Rotate L</string>
    <string name="action_flip_h">Flip H</string>
    <string name="action_flip_v">Flip V</string>
    <string name="collage_pictures">%s pics</string>
    <string name="collage_name_txt">Collage</string>
    <string name="collage_dlg_save">Save edited collage?</string>
    <string name="collage_dlg_discard_button">Discard</string>
    <string name="collage_toast_could_not_add_image_txt">Could not add picture</string>
    <string name="collage_toast_could_not_add_all_images_txt">Could not add all pictures</string>
    <string name="effect_menu_collage_recent">Recent</string>
    <string name="effect_menu_collage_grid">Template</string>
    <string name="effect_menu_collage_free">Free</string>
    <string name="effect_menu_collage_background">Backdrop</string>
    <string name="collage_toast_shake_to_shuffle">Shake your phone to change collage style</string>
    <string name="style_menu_removal">Remove</string>
    <string name="dlg_content_progress_txt">Please wait</string>
    <string name="save_button">Save</string>
    <string name="apply_button">Apply</string>
    <string name="cancel_button">Cancel</string>
    <string name="gif_title_converting">Converting GIF animation</string>
    <string name="gif_too_many_photos_txt">Too many photos in this burst sequence. Only the first %s photos can be converted to GIF animation. Continue?</string>
    <string name="style_menu_daily">Daily</string>
    <string name="style_menu_natural">Natural</string>
    <string name="style_menu_youth">Youth</string>
    <string name="style_menu_club">Club</string>
    <string name="style_menu_office">Office</string>
    <string name="style_menu_suntan">Suntan</string>
    <string name="style_menu_cute">Cute</string>
    <string name="style_menu_party">Party</string>
    <string name="style_menu_sweetie">Sweetie</string>
    <string name="style_menu_vintage">Vintage</string>
    <string name="photoeditor_app_name_txt">Photo editor</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="saving_image">Saving picture…</string>
    <string name="drm_edit_not_allowed">Protected file cannot be edited.</string>
    <string name="edited_photo_bucket_name">Edited</string>
</resources>
