<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/text_font_picker_container_padding_bottom" android:layout_width="@dimen/text_toolbar_font_item_width" android:layout_height="@dimen/text_toolbar_font_list_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="@dimen/text_toolbar_font_list_text_size" android:id="@id/normal_font" android:layout_marginTop="@dimen/text_list_first_item_margin_top" android:text="@string/text_font" style="@style/TextFontDialog" />
    <View android:background="@drawable/cam_txt_fontsize_divider_icon" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="@dimen/text_list_item_divider_margin_left_right" android:layout_marginRight="@dimen/text_list_item_divider_margin_left_right" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="@dimen/text_toolbar_font_list_text_size" android:id="@id/hw_font_young" android:text="@string/text_font_hwr_young" style="@style/TextFontDialog" />
    <View android:background="@drawable/cam_txt_fontsize_divider_icon" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="@dimen/text_list_item_divider_margin_left_right" android:layout_marginRight="@dimen/text_list_item_divider_margin_left_right" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="@dimen/text_toolbar_font_list_text_size" android:id="@id/hw_font_finance" android:text="@string/text_font_hwr_finance" style="@style/TextFontDialog" />
    <View android:background="@drawable/cam_txt_fontsize_divider_icon" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="@dimen/text_list_item_divider_margin_left_right" android:layout_marginRight="@dimen/text_list_item_divider_margin_left_right" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="@dimen/text_toolbar_font_list_text_size" android:id="@id/hw_font_rocky" android:text="@string/text_font_hwr_rocky" style="@style/TextFontDialog" />
</LinearLayout>