<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/action_bar_main" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="horizontal" android:id="@id/action_bar_back" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentStart="true">
            <ImageButton android:id="@id/history_button" android:src="@drawable/ic_menu_recent_history" style="@style/ImageActionButton" />
            <ImageButton android:id="@id/undo_button" style="@style/ImageUndoButton" />
            <ImageButton android:id="@id/redo_button" style="@style/ImageRedoButton" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/custom_button" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentEnd="true">
            <Button android:id="@id/save_button" android:text="@string/save_button" style="@style/ImageActionButton" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@id/action_bar_edit" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentEnd="true">
        <TextView android:gravity="center_vertical" android:layout_gravity="center" android:id="@id/edit_title" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentStart="true" style="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title" />
        <LinearLayout android:orientation="horizontal" android:id="@id/edit_button" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentEnd="true">
            <Button android:id="@id/cancel_button" android:text="@string/cancel_button" style="@style/ImageActionButton" />
            <Button android:id="@id/apply_button" android:text="@string/apply_button" style="@style/ImageActionButton" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>