<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/footer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/second_bar" android:background="@color/background_main_toolbar" android:layout_width="fill_parent" android:layout_height="@dimen/collage_thumbnail_size" android:layoutDirection="ltr">
            <com.sonymobile.china.photoeditor.filtershow.ui.FramedTextButton android:layout_gravity="start|center" android:id="@id/pictureNum" android:tag="2" android:background="@drawable/filtershow_button_background" android:layout_width="@dimen/collage_choose_num_width" android:layout_height="@dimen/collage_choose_num_heigth" android:layout_marginLeft="@dimen/collage_choose_num_left_margin" android:scaleType="centerInside" />
            <ImageButton android:layout_gravity="center" android:id="@id/chooseBg" android:visibility="gone" android:layout_width="@dimen/collage_choose_pic_width" android:layout_height="@dimen/collage_choose_pic_heigth" android:layout_marginLeft="@dimen/collage_choose_pic_left_margin" android:src="@drawable/cam_collage_background_album_icon" android:scaleType="centerInside" />
            <HorizontalScrollView android:id="@id/recentList" android:background="@color/background_main_toolbar" android:visibility="gone" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/collage_thumbnail_padding_v" android:layout_marginBottom="@dimen/collage_thumbnail_padding_v" android:layoutDirection="ltr">
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/listRecents" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/thumbnail_margin" />
            </HorizontalScrollView>
            <HorizontalScrollView android:id="@id/gridList" android:background="@color/background_main_toolbar" android:visibility="gone" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/collage_thumbnail_padding_v" android:layout_marginBottom="@dimen/collage_thumbnail_padding_v" android:layoutDirection="ltr">
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/listGrids" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/thumbnail_margin" />
            </HorizontalScrollView>
            <HorizontalScrollView android:id="@id/freeList" android:background="@color/background_main_toolbar" android:visibility="gone" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/collage_thumbnail_padding_v" android:layout_marginBottom="@dimen/collage_thumbnail_padding_v" android:layoutDirection="ltr">
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/listFrees" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/thumbnail_margin" />
            </HorizontalScrollView>
            <HorizontalScrollView android:id="@id/backgoundList" android:background="@color/background_main_toolbar" android:visibility="gone" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/collage_thumbnail_padding_v" android:layout_marginBottom="@dimen/collage_thumbnail_padding_v" android:layoutDirection="ltr">
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/listBackgounds" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/thumbnail_margin" />
            </HorizontalScrollView>
        </LinearLayout>
        <View android:background="@color/toolbar_separation_line" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <LinearLayout android:background="@color/background_main_toolbar" android:layout_height="@dimen/collage_main_toolbar_height" style="@style/CollageEffectsMenuContainer">
            <Button android:id="@id/recent" android:padding="@dimen/collage_main_toolbar_padding" android:layout_width="0.0dip" android:layout_height="fill_parent" android:scaleType="centerInside" android:text="@string/effect_menu_collage_recent" android:drawableTop="@drawable/cam_collage_recent_icon" android:layout_weight="1.0" style="@style/EffectsMenuActionButton" />
            <Button android:id="@id/grid" android:padding="@dimen/collage_main_toolbar_padding" android:layout_width="0.0dip" android:layout_height="fill_parent" android:scaleType="centerInside" android:text="@string/effect_menu_collage_grid" android:drawableTop="@drawable/cam_collage_grid_icon" android:layout_weight="1.0" style="@style/EffectsMenuActionButton" />
            <Button android:id="@id/free" android:padding="@dimen/collage_main_toolbar_padding" android:layout_width="0.0dip" android:layout_height="fill_parent" android:scaleType="centerInside" android:text="@string/effect_menu_collage_free" android:drawableTop="@drawable/cam_collage_free_icon" android:layout_weight="1.0" style="@style/EffectsMenuActionButton" />
            <Button android:id="@id/background" android:padding="@dimen/collage_main_toolbar_padding" android:layout_width="0.0dip" android:layout_height="fill_parent" android:scaleType="centerInside" android:text="@string/effect_menu_collage_background" android:drawableTop="@drawable/cam_collage_background_icon" android:layout_weight="1.0" style="@style/EffectsMenuActionButton" />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout android:id="@id/placeholder" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="@dimen/collage_body_margin" android:layout_above="@id/footer" />
</RelativeLayout>